[project]
name = "jomik-cartographer"
dynamic = ["version"]
requires-python = ">= 3.8"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.16, <2.0", "typing-extensions ~= 4.12"]
keywords = ["klipper", "3D printing", "cartographer"]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: End Users/Desktop",

  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
homepage = "https://github.com/Jomik/cartographer-klippy"
repository = "https://github.com/Jomik/cartographer-klippy"

[project.optional-dependencies]
scipy = ["scipy>=1.9.3"]

[tool.pyright]
pythonVersion = "3.8"
venvPath = "./"
venv = ".venv"
reportMissingModuleSource = false # klippy imports are always missing sources
reportMissingTypeStubs = true

[tool.ruff]
target-version = "py38"

[tool.pdm.version]
source = "scm"
write_to = "cartographer/__version__.py"
write_template = "__version__ = '{}'\n"

[tool.pdm.build]
excludes = ["./**/.git"]
includes = ["cartographer"]
editable-backend = "path"
custom-hook = "pdm_build.py"

[build-system]
requires = ["pdm-backend==2.3.3"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
  "pdm-backend==2.3.3", # Keep this for type safety in pdm_build.py
  "ruff",
  "basedpyright",
]
