[project]
name = "jomik-cartographer"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.16, <2.0", "typing-extensions ~= 4.12"]
keywords = ["klipper", "3D printing", "cartographer"]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: End Users/Desktop",

  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
description = "An extras for klipper to integrate with cartographer"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/Jomik/cartographer-klippy"
repository = "https://github.com/Jomik/cartographer-klippy"

[project.optional-dependencies]
scipy = ["scipy>=1.9.3"]

[dependency-groups]
test = ["pytest>=8.3.4", "pytest-mock>=3.14.0"]
lint = ["ruff>=0.9.7"]
typecheck = ["basedpyright>=1.27.1"]

[tool.pyright]
pythonVersion = "3.8"
venvPath = "./"
venv = ".venv"
reportMissingModuleSource = false # klippy imports are always missing sources
reportMissingTypeStubs = true

[tool.ruff]
target-version = "py38"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.uv]
default-groups = ["test", "lint", "typecheck"]

[tool.hatch]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cartographer/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cartographer"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
